; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum1_acl_tcam.c_mlxsw_sp1_acl_tcam_entry_del.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum1_acl_tcam.c_mlxsw_sp1_acl_tcam_entry_del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp = type { i32 }
%struct.mlxsw_sp1_acl_tcam_region = type { i32 }
%struct.mlxsw_sp1_acl_tcam_chunk = type { i32 }
%struct.mlxsw_sp1_acl_tcam_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlxsw_sp*, i8*, i8*, i8*)* @mlxsw_sp1_acl_tcam_entry_del to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlxsw_sp1_acl_tcam_entry_del(%struct.mlxsw_sp* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.mlxsw_sp*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.mlxsw_sp1_acl_tcam_region*, align 8
  %10 = alloca %struct.mlxsw_sp1_acl_tcam_chunk*, align 8
  %11 = alloca %struct.mlxsw_sp1_acl_tcam_entry*, align 8
  store %struct.mlxsw_sp* %0, %struct.mlxsw_sp** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.mlxsw_sp1_acl_tcam_region*
  store %struct.mlxsw_sp1_acl_tcam_region* %13, %struct.mlxsw_sp1_acl_tcam_region** %9, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = bitcast i8* %14 to %struct.mlxsw_sp1_acl_tcam_chunk*
  store %struct.mlxsw_sp1_acl_tcam_chunk* %15, %struct.mlxsw_sp1_acl_tcam_chunk** %10, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = bitcast i8* %16 to %struct.mlxsw_sp1_acl_tcam_entry*
  store %struct.mlxsw_sp1_acl_tcam_entry* %17, %struct.mlxsw_sp1_acl_tcam_entry** %11, align 8
  %18 = load %struct.mlxsw_sp*, %struct.mlxsw_sp** %5, align 8
  %19 = load %struct.mlxsw_sp1_acl_tcam_region*, %struct.mlxsw_sp1_acl_tcam_region** %9, align 8
  %20 = getelementptr inbounds %struct.mlxsw_sp1_acl_tcam_region, %struct.mlxsw_sp1_acl_tcam_region* %19, i32 0, i32 0
  %21 = load %struct.mlxsw_sp1_acl_tcam_chunk*, %struct.mlxsw_sp1_acl_tcam_chunk** %10, align 8
  %22 = getelementptr inbounds %struct.mlxsw_sp1_acl_tcam_chunk, %struct.mlxsw_sp1_acl_tcam_chunk* %21, i32 0, i32 0
  %23 = load %struct.mlxsw_sp1_acl_tcam_entry*, %struct.mlxsw_sp1_acl_tcam_entry** %11, align 8
  %24 = getelementptr inbounds %struct.mlxsw_sp1_acl_tcam_entry, %struct.mlxsw_sp1_acl_tcam_entry* %23, i32 0, i32 0
  %25 = call i32 @mlxsw_sp_acl_ctcam_entry_del(%struct.mlxsw_sp* %18, i32* %20, i32* %22, i32* %24)
  ret void
}

declare dso_local i32 @mlxsw_sp_acl_ctcam_entry_del(%struct.mlxsw_sp*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
